apps/kafka/1-namespace.yaml
# apps/kafka/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
