apps/kafka/2-zookeeper.yaml
# apps/kafka/2-zookeeper.yaml

# 1. O Service para o Zookeeper. É 'headless' (clusterIP: None)
# para que possamos nos conectar a cada pod individualmente.
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: kafka
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
  clusterIP: None # Headless Service
---
# 3. O StatefulSet, que gerencia os pods do Zookeeper
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-sts
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: zookeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:latest
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: zookeeper-storage
          mountPath: /var/lib/zookeeper/data
  volumeClaimTemplates:
  - metadata:
      name: zookeeper-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
