apps/kafka/3-kafka.yaml
# apps/kafka/3-kafka.yaml

# 1. O Service para o Kafka Broker
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
---
# 3. O StatefulSet, que gerencia os pods do Kafka
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-sts
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-service
  replicas: 1 # Como no tutorial, apenas 1 réplica
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:latest
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-storage
          mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
  - metadata:
      name: kafka-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
