apps/kafka/4-kafka-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-monitoring-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  ports:
  - port: 8082
    targetPort: 8080
  selector:
    app: kafka-ui
  # type: LoadBalancer # use for port forwarding
  type: ClusterIP 




# kubectl delete statefulset kafka -n kafka
# kubectl delete service kafka-hs kafka-cs -n kafka
# kubectl delete pvc datadir-kafka-0 datadir-kafka-1 datadir-kafka-2 -n kafka


## kubectl apply -f 3-kafka.yaml
## kubectl get pods -n kafka -l app=kafka --watch
## kubectl get svc -n kafka -l app=kafka --watch
